--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
                     <button class="bg-yellow-400 text-xl rounded-lg px-7 py-2">Register</button>
 
                 </div>
-                <div class="lg:hidden">
+                <div class="absolute right-5  lg:hidden">
                     <i class="fa-solid fa-bars"></i>
                 </div>
-
             </nav>
             <!-- Hero-section -->
             <section>
@@ -93,7 +92,7 @@
                              your furry friends. Shop now
                             and make tails wag with joy!
                         </p>
-                        <button class="bg-yellow-400 text-xl rounded-lg px-7 py-2">Find a Pet</button>
+                        <button class=" bg-yellow-400 text-xl rounded-lg px-7 py-2">Find a Pet</button>
                     </div>
                     <!-- image-content -->
                      <div>
@@ -101,8 +100,63 @@
                      </div>
                 </div>
             </section> 
-
         </header>
+        <!-- Category Section -->
+         <section>
+            <div class=" px-5 lg:px-28 mt-20 mb-10 lg:mb-28">
+                <h3 class="font-adlam text-2xl lg:text-4xl font-bold mb-10">Browse By Categories</h3>
+                <div class="grid grid-cols-2 lg:grid-cols-6 gap-10">
+                    <!-- dog -->
+                    <div class="bg-[#F9DF8A] rounded-lg  grid grid-flow-row justify-center items-center py-5 text-center">
+                        <div>
+                            <img class="bg-white rounded-full p-2" src="c1-assets/dog-cartoon.png">
+                        </div>
+                        <h3>Dog</h3>
+                        <p>3 items</p>
+                    </div>
+                    <!-- Fish -->
+                    <div class="bg-[#F9DF8A] rounded-lg  grid grid-flow-row justify-center items-center py-5 text-center">
+                        <div>
+                            <img class="bg-white rounded-full p-2" src="c1-assets/fish-cartoon.png">
+                        </div>
+                        <h3>Fish</h3>
+                        <p>3 items</p>
+                    </div>
+                    <!-- Cat -->
+                    <div class="bg-[#F9DF8A] rounded-lg  grid grid-flow-row justify-center items-center py-5 text-center">
+                        <div>
+                            <img class="bg-white rounded-full p-2" src="c1-assets/cat-cartoon.png">
+                        </div>
+                        <h3>Cat</h3>
+                        <p>3 items</p>
+                    </div>
+                    <!-- Birds -->
+                    <div class="bg-[#F9DF8A] rounded-lg grid grid-flow-row justify-center items-center py-5 text-center">
+                        <div>
+                            <img class="bg-white rounded-full p-2" src="c1-assets/bird-cartoon.png">
+                        </div>
+                        <h3>Birds</h3>
+                        <p>3 items</p>
+                    </div>
+                    <!-- small pet -->
+                    <div class="bg-[#F9DF8A] rounded-lg grid grid-flow-row justify-center items-center py-5 text-center">
+                        <div>
+                            <img class="bg-white rounded-full p-2" src="c1-assets/mouse-cartoon.png">
+                        </div>
+                        <h3>Small pet</h3>
+                        <p>3 items</p>
+                    </div>
+                    <!-- Rabit -->
+                    <div class="bg-[#F9DF8A] rounded-lg grid grid-flow-row justify-center items-center py-5 text-center">
+                        <div>
+                            <img class="bg-white rounded-full p-2" src="c1-assets/rabbit-cartoon.png">
+                        </div>
+                        <h3>Rabit</h3>
+                        <p>3 items</p>
+                    </div>
+                </div>
+            </div>
+         </section>
     </main>
 
 
