added some changes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 </div>
                 <div class="absolute right-5  lg:hidden">
-                    <i class="fa-solid fa-bars"></i>
+                    <i class="fa-solid fa-bars text-3xl"></i>
                 </div>
             </nav>
             <!-- Hero-section -->
@@ -105,54 +105,54 @@
          <section>
             <div class=" px-5 lg:px-28 mt-20 mb-10 lg:mb-28">
                 <h3 class="font-adlam text-2xl lg:text-4xl font-bold mb-10">Browse By Categories</h3>
-                <div class="grid grid-cols-2 lg:grid-cols-6 gap-10">
+                <div class="grid grid-cols-2 lg:grid-cols-6 gap-2 lg:gap-10">
                     <!-- dog -->
                     <div class="bg-[#F9DF8A] rounded-lg  grid grid-flow-row justify-center items-center py-5 text-center">
                         <div>
                             <img class="bg-white rounded-full p-2" src="c1-assets/dog-cartoon.png">
                         </div>
-                        <h3>Dog</h3>
-                        <p>3 items</p>
+                        <h3 class="font-bold text-xl font-adlam">Dog</h3>
+                        <p class="font-sora">3 items</p>
                     </div>
                     <!-- Fish -->
                     <div class="bg-[#F9DF8A] rounded-lg  grid grid-flow-row justify-center items-center py-5 text-center">
                         <div>
                             <img class="bg-white rounded-full p-2" src="c1-assets/fish-cartoon.png">
                         </div>
-                        <h3>Fish</h3>
-                        <p>3 items</p>
+                        <h3 class="font-bold text-xl font-adlam">Fish</h3>
+                        <p class="font-sora">3 items</p>
                     </div>
                     <!-- Cat -->
                     <div class="bg-[#F9DF8A] rounded-lg  grid grid-flow-row justify-center items-center py-5 text-center">
                         <div>
                             <img class="bg-white rounded-full p-2" src="c1-assets/cat-cartoon.png">
                         </div>
-                        <h3>Cat</h3>
-                        <p>3 items</p>
+                        <h3 class="font-bold text-xl font-adlam">Cat</h3>
+                        <p class="font-sora">3 items</p>
                     </div>
                     <!-- Birds -->
                     <div class="bg-[#F9DF8A] rounded-lg grid grid-flow-row justify-center items-center py-5 text-center">
                         <div>
                             <img class="bg-white rounded-full p-2" src="c1-assets/bird-cartoon.png">
                         </div>
-                        <h3>Birds</h3>
-                        <p>3 items</p>
+                        <h3 class="font-bold text-xl font-adlam">Birds</h3>
+                        <p class="font-sora">3 items</p>
                     </div>
                     <!-- small pet -->
                     <div class="bg-[#F9DF8A] rounded-lg grid grid-flow-row justify-center items-center py-5 text-center">
                         <div>
                             <img class="bg-white rounded-full p-2" src="c1-assets/mouse-cartoon.png">
                         </div>
-                        <h3>Small pet</h3>
-                        <p>3 items</p>
+                        <h3 class="font-bold text-xl font-adlam">Small pet</h3>
+                        <p class="font-sora">3 items</p>
                     </div>
                     <!-- Rabit -->
                     <div class="bg-[#F9DF8A] rounded-lg grid grid-flow-row justify-center items-center py-5 text-center">
                         <div>
                             <img class="bg-white rounded-full p-2" src="c1-assets/rabbit-cartoon.png">
                         </div>
-                        <h3>Rabit</h3>
-                        <p>3 items</p>
+                        <h3 class="font-bold text-xl font-adlam">Rabit</h3>
+                        <p class="font-sora">3 items</p>
                     </div>
                 </div>
             </div>
