added trending product section

--- a/index.html
+++ b/index.html
@@ -39,16 +39,18 @@
         .display-block {
             display: block;
         }
-        .font-sora{
+
+        .font-sora {
             font-family: Sora;
         }
-        .font-adlam{
+
+        .font-adlam {
             font-family: ADlaM Display;
         }
     </style>
 </head>
 
-<body>
+<body style="box-sizing: border-box;">
 
     <main>
         <!-- Header section -->
@@ -87,27 +89,30 @@
                 <div class="px-5 lg:px-28">
                     <!-- text-content -->
                     <div class="lg:absolute">
-                        <h1 class=" font-bold text-3xl lg:text-5xl font-adlam mb-5">Pamper Your Pet,<br> Because They Deserve<br> the Best</h1>
-                        <p class="text-gray-500 text-xl font-sora mb-5">Discover a world of treats, toys, and essentials handpicked for<br>
-                             your furry friends. Shop now
+                        <h1 class=" font-bold text-3xl lg:text-5xl font-adlam mb-5">Pamper Your Pet,<br> Because They
+                            Deserve<br> the Best</h1>
+                        <p class="text-gray-500 text-xl font-sora mb-5">Discover a world of treats, toys, and essentials
+                            handpicked for<br>
+                            your furry friends. Shop now
                             and make tails wag with joy!
                         </p>
                         <button class=" bg-yellow-400 text-xl rounded-lg px-7 py-2">Find a Pet</button>
                     </div>
                     <!-- image-content -->
-                     <div>
+                    <div>
                         <img src="c1-assets/cat-big.png">
-                     </div>
+                    </div>
                 </div>
-            </section> 
+            </section>
         </header>
         <!-- Category Section -->
-         <section>
+        <section>
             <div class=" px-5 lg:px-28 mt-20 mb-10 lg:mb-28">
                 <h3 class="font-adlam text-2xl lg:text-4xl font-bold mb-10">Browse By Categories</h3>
                 <div class="grid grid-cols-2 lg:grid-cols-6 gap-2 lg:gap-10">
                     <!-- dog -->
-                    <div class="bg-[#F9DF8A] rounded-lg  grid grid-flow-row justify-center items-center py-5 text-center">
+                    <div
+                        class="bg-[#F9DF8A] rounded-lg  grid grid-flow-row justify-center items-center py-5 text-center">
                         <div>
                             <img class="bg-white rounded-full p-2" src="c1-assets/dog-cartoon.png">
                         </div>
@@ -115,7 +120,8 @@
                         <p class="font-sora">3 items</p>
                     </div>
                     <!-- Fish -->
-                    <div class="bg-[#F9DF8A] rounded-lg  grid grid-flow-row justify-center items-center py-5 text-center">
+                    <div
+                        class="bg-[#F9DF8A] rounded-lg  grid grid-flow-row justify-center items-center py-5 text-center">
                         <div>
                             <img class="bg-white rounded-full p-2" src="c1-assets/fish-cartoon.png">
                         </div>
@@ -123,7 +129,8 @@
                         <p class="font-sora">3 items</p>
                     </div>
                     <!-- Cat -->
-                    <div class="bg-[#F9DF8A] rounded-lg  grid grid-flow-row justify-center items-center py-5 text-center">
+                    <div
+                        class="bg-[#F9DF8A] rounded-lg  grid grid-flow-row justify-center items-center py-5 text-center">
                         <div>
                             <img class="bg-white rounded-full p-2" src="c1-assets/cat-cartoon.png">
                         </div>
@@ -131,7 +138,8 @@
                         <p class="font-sora">3 items</p>
                     </div>
                     <!-- Birds -->
-                    <div class="bg-[#F9DF8A] rounded-lg grid grid-flow-row justify-center items-center py-5 text-center">
+                    <div
+                        class="bg-[#F9DF8A] rounded-lg grid grid-flow-row justify-center items-center py-5 text-center">
                         <div>
                             <img class="bg-white rounded-full p-2" src="c1-assets/bird-cartoon.png">
                         </div>
@@ -139,7 +147,8 @@
                         <p class="font-sora">3 items</p>
                     </div>
                     <!-- small pet -->
-                    <div class="bg-[#F9DF8A] rounded-lg grid grid-flow-row justify-center items-center py-5 text-center">
+                    <div
+                        class="bg-[#F9DF8A] rounded-lg grid grid-flow-row justify-center items-center py-5 text-center">
                         <div>
                             <img class="bg-white rounded-full p-2" src="c1-assets/mouse-cartoon.png">
                         </div>
@@ -147,7 +156,8 @@
                         <p class="font-sora">3 items</p>
                     </div>
                     <!-- Rabit -->
-                    <div class="bg-[#F9DF8A] rounded-lg grid grid-flow-row justify-center items-center py-5 text-center">
+                    <div
+                        class="bg-[#F9DF8A] rounded-lg grid grid-flow-row justify-center items-center py-5 text-center">
                         <div>
                             <img class="bg-white rounded-full p-2" src="c1-assets/rabbit-cartoon.png">
                         </div>
@@ -156,7 +166,148 @@
                     </div>
                 </div>
             </div>
-         </section>
+        </section>
+        <!-- Finding Product -->
+        <section class=" px-5 py-10 lg:py-28 lg:px-28 mt-20 mb-10 lg:mb-28 bg-[#FFF9F4]">
+            <h3 class="font-adlam text-2xl lg:text-4xl font-bold mb-10">Trending Pet Products</h3>
+            <div class="grid grid-cols-2 lg:grid-cols-5 grid-rows-3 gap-5">
+                <div class="bg-[#F9DF8A] px-10 rounded-lg col-span-2 row-span-3">
+                    <div class="">
+                        <h3 class="font-bold text-4xl font-adlam pt-10 mb-5">T- Shirt For Dogs</h3>
+                        <p class="font-sora text-gray-600 mb-5">Discover a world of treats, toys and<br>
+                            essentials handpicked for.</p>
+                        <button class="rounded-lg bg-white text-black px-5 py-2 font-bold text-xl font-sora">Shop
+                            Now</button>
+                    </div>
+
+                    <div class="relative left-10 lg:left-28 lg:-top-16">
+                        <img class="h-[300px]" src="c1-assets/cute-pet-mid.png">
+                    </div>
+                </div>
+
+
+                <div class="bg-white flex  gap-2 lg:gap-5 px-2 lg:px-5 py-5 rounded-lg lg:h-[118px] font-sora">
+                    <div class="bg-[#FFF9F4] rounded-lg flex p-5 items-center">
+                        <img src="c1-assets/dog-cartoon.png">
+                    </div>
+                    <div class="items-center">
+                        <div class="flex gap-2 items-center">
+                            <i class="fa-solid fa-star text-yellow-300"></i>
+                            <p >4.5</p>
+                        </div>
+                        <h3 class="font-bold text-xl">Pet Bed</h3>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-white flex gap-2 lg:gap-5 px-5 py-5 rounded-lg lg:h-[118px] font-sora">
+                    <div class="bg-[#FFF9F4] rounded-lg flex p-5 items-center">
+                        <img src="c1-assets/fish-cartoon.png">
+                    </div>
+                    <div class="items-center">
+                        <div class="flex gap-2 items-center">
+                            <i class="fa-solid fa-star text-yellow-300"></i>
+                            <p >4.5</p>
+                        </div>
+                        <h3 class="font-bold text-xl">Pet Bed</h3>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-white flex gap-2 lg:gap-5 px-2 lg:px-5 py-5 rounded-lg lg:h-[118px] font-sora">
+                    <div class="bg-[#FFF9F4] rounded-lg flex p-5 items-center">
+                        <img src="c1-assets/bird-cartoon.png">
+                    </div>
+                    <div class="items-center">
+                        <div class="flex gap-2 items-center">
+                            <i class="fa-solid fa-star text-yellow-300"></i>
+                            <p >4.5</p>
+                        </div>
+                        <h3 class="font-bold text-xl">Pet Bed</h3>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-white flex gap-2 lg:gap-5 px-2 lg:px-5 py-5 rounded-lg lg:h-[118px] font-sora">
+                    <div class="bg-[#FFF9F4] rounded-lg flex p-5 items-center">
+                        <img src="c1-assets/rabbit-cartoon.png">
+                    </div>
+                    <div class="items-center">
+                        <div class="flex gap-2 items-center">
+                            <i class="fa-solid fa-star text-yellow-300"></i>
+                            <p >4.5</p>
+                        </div>
+                        <h3 class="font-bold text-xl">Pet Bed</h3>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-white flex gap-2 lg:gap-5 px-2 lg:px-5 py-5 rounded-lg lg:h-[118px] font-sora">
+                    <div class="bg-[#FFF9F4] rounded-lg flex p-5 items-center">
+                        <img src="c1-assets/bird-cartoon.png">
+                    </div>
+                    <div class="items-center">
+                        <div class="flex gap-2 items-center">
+                            <i class="fa-solid fa-star text-yellow-300"></i>
+                            <p >4.5</p>
+                        </div>
+                        <h3 class="font-bold text-xl">Pet Bed</h3>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-white flex gap-2 lg:gap-5 px-2 lg:px-5 py-5 rounded-lg lg:h-[118px] font-sora">
+                    <div class="bg-[#FFF9F4] rounded-lg flex p-5 items-center">
+                        <img src="c1-assets/pet-couch.png">
+                    </div>
+                    <div class="items-center">
+                        <div class="flex gap-2 items-center">
+                            <i class="fa-solid fa-star text-yellow-300"></i>
+                            <p >4.5</p>
+                        </div>
+                        <h3 class="font-bold text-xl">Pet Bed</h3>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-white flex gap-2 lg:gap-5 px-2 lg:px-5 py-5 rounded-lg lg:h-[118px] font-sora">
+                    <div class="bg-[#FFF9F4] rounded-lg flex p-5 items-center">
+                        <img src="c1-assets/fish-cartoon.png">
+                    </div>
+                    <div class="items-center">
+                        <div class="flex gap-2 items-center">
+                            <i class="fa-solid fa-star text-yellow-300"></i>
+                            <p >4.5</p>
+                        </div>
+                        <h3 class="font-bold text-xl">Pet Bed</h3>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="bg-white flex gap-2 lg:gap-5 px-2 lg:px-5 py-5 rounded-lg lg:h-[118px] font-sora">
+                    <div class="bg-[#FFF9F4] rounded-lg flex p-5 items-center">
+                        <img src="c1-assets/pet-couch.png">
+                    </div>
+                    <div class="items-center">
+                        <div class="flex gap-2 items-center">
+                            <i class="fa-solid fa-star text-yellow-300"></i>
+                            <p >4.5</p>
+                        </div>
+                        <h3 class="font-bold text-xl">Pet Bed</h3>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                <div class="hidden bg-white lg:flex gap-5 px-5 py-5 rounded-lg lg:h-[118px] font-sora">
+                    <div class="bg-[#FFF9F4] rounded-lg flex p-5 items-center">
+                        <img src="c1-assets/rabbit-cartoon.png">
+                    </div>
+                    <div class="items-center">
+                        <div class="flex gap-2 items-center">
+                            <i class="fa-solid fa-star text-yellow-300"></i>
+                            <p >4.5</p>
+                        </div>
+                        <h3 class="font-bold text-xl">Pet Bed</h3>
+                        <p>$39.99</p>
+                    </div>
+                </div>
+                
+
+            </div>
+
+        </section>
     </main>
 
 
