--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
         </section>
         <!-- Finding Product -->
-        <section class=" px-5 py-10 lg:py-28 lg:px-28 mt-20 mb-10 lg:mb-28 bg-[#FFF9F4]">
+        <section class=" px-5 py-10 lg:py-28 lg:px-28 mt-20 mb-10 lg:mb-20 bg-[#FFF9F4]">
             <h3 class="font-adlam text-2xl lg:text-4xl font-bold mb-10">Trending Pet Products</h3>
             <div class="grid grid-cols-2 lg:grid-cols-5 grid-rows-3 gap-5">
                 <div class="bg-[#F9DF8A] px-10 rounded-lg col-span-2 row-span-3">
@@ -180,8 +180,8 @@
                             Now</button>
                     </div>
 
-                    <div class="relative left-10 lg:left-28 lg:-top-16">
-                        <img class="h-[300px]" src="c1-assets/cute-pet-mid.png">
+                    <div class="relative left-10 lg:left-32 lg:-top-16">
+                        <img  src="c1-assets/cute-pet-small.png">
                     </div>
                 </div>
 
@@ -304,10 +304,42 @@
                     </div>
                 </div>
                 
-
             </div>
 
         </section>
+
+        <!-- Price section -->
+         <section>
+            <div class=" px-5 py-10 lg:py-28 lg:px-28 mb-10 lg:mb-28">
+                <h3 class="font-adlam text-2xl lg:text-4xl font-bold mb-10">Everyday low Price</h3>
+                <div class="grid grid-cols-1 lg:grid-cols-5 gap-5 justify-center items-center">
+                    <div class="lg:col-span-3 col-span-2 grid grid-cols-2 lg:grid-cols-3 lg:items-center  rounded-lg lg:px-20 px-5 py-10 bg-gradient-to-r from-[#F8CCFBFF] to-[#ACD2FDFF]">
+                        <!-- text-content -->
+                        <div class="lg:col-span-2 ">
+                            <p class="hidden lg:block font-sora text-xl mb-5">Under Price</p>
+                            <h3 class="font-adlam font-bold text-xl lg:text-3xl mb-5">Pet Grooming Mitt</h3>
+                            <h3 class="text-white hidden lg:block font-bold font-adlam text-2xl mb-5">(Easy Hair Removal)</h3>
+                            <h1 class="text-4xl lg:text-black text-white font-bold font-adlam">$7.99</h1>
+                        </div>
+                        <!-- image-content -->
+                         <div class="lg:w-[350px] lg:pr-10">
+                            <img  src="c1-assets/cute-dog-mid.png">
+                         </div>
+                    </div>
+                    <div class="col-span-2 grid grid-cols-2  rounded-lg px-5 lg:px-10 py-10  bg-gradient-to-r from-[#FFF9F4] to-[#F9DF8A]">
+                        <!-- text-content -->
+                        <div class="col-span-1" >
+                            <h3 class="font-adlam font-bold text-xl lg:text-3xl mb-5" >T-Shirt for Dogs</h3>                     
+                            <h1 class="text-4xl text-yellow-400 font-bold font-adlam">$7.99</h1>
+                        </div>
+                        <!-- image-content -->
+                         <div  class="lg:w-[300px] relative lg:right-20 ">
+                            <img src="c1-assets/cute-pet-mid.png">
+                         </div>
+                    </div>
+                </div>
+            </div>
+         </section>
     </main>
 
 
