added an extra section

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
         </section>
         <!-- Finding Product -->
-        <section class=" px-5 py-10 lg:py-28 lg:px-28 mt-20 mb-10 lg:mb-20 bg-[#FFF9F4]">
+        <section class=" px-5 py-10 lg:py-28 lg:px-28 mt-20 mb-10 lg:mb-10 bg-[#FFF9F4]">
             <h3 class="font-adlam text-2xl lg:text-4xl font-bold mb-10">Trending Pet Products</h3>
             <div class="grid grid-cols-2 lg:grid-cols-5 grid-rows-3 gap-5">
                 <div class="bg-[#F9DF8A] px-10 rounded-lg col-span-2 row-span-3">
@@ -181,7 +181,7 @@
                     </div>
 
                     <div class="relative left-10 lg:left-32 lg:-top-16">
-                        <img  src="c1-assets/cute-pet-small.png">
+                        <img src="c1-assets/cute-pet-small.png">
                     </div>
                 </div>
 
@@ -193,7 +193,7 @@
                     <div class="items-center">
                         <div class="flex gap-2 items-center">
                             <i class="fa-solid fa-star text-yellow-300"></i>
-                            <p >4.5</p>
+                            <p>4.5</p>
                         </div>
                         <h3 class="font-bold text-xl">Pet Bed</h3>
                         <p>$39.99</p>
@@ -206,7 +206,7 @@
                     <div class="items-center">
                         <div class="flex gap-2 items-center">
                             <i class="fa-solid fa-star text-yellow-300"></i>
-                            <p >4.5</p>
+                            <p>4.5</p>
                         </div>
                         <h3 class="font-bold text-xl">Pet Bed</h3>
                         <p>$39.99</p>
@@ -219,7 +219,7 @@
                     <div class="items-center">
                         <div class="flex gap-2 items-center">
                             <i class="fa-solid fa-star text-yellow-300"></i>
-                            <p >4.5</p>
+                            <p>4.5</p>
                         </div>
                         <h3 class="font-bold text-xl">Pet Bed</h3>
                         <p>$39.99</p>
@@ -232,7 +232,7 @@
                     <div class="items-center">
                         <div class="flex gap-2 items-center">
                             <i class="fa-solid fa-star text-yellow-300"></i>
-                            <p >4.5</p>
+                            <p>4.5</p>
                         </div>
                         <h3 class="font-bold text-xl">Pet Bed</h3>
                         <p>$39.99</p>
@@ -245,7 +245,7 @@
                     <div class="items-center">
                         <div class="flex gap-2 items-center">
                             <i class="fa-solid fa-star text-yellow-300"></i>
-                            <p >4.5</p>
+                            <p>4.5</p>
                         </div>
                         <h3 class="font-bold text-xl">Pet Bed</h3>
                         <p>$39.99</p>
@@ -258,7 +258,7 @@
                     <div class="items-center">
                         <div class="flex gap-2 items-center">
                             <i class="fa-solid fa-star text-yellow-300"></i>
-                            <p >4.5</p>
+                            <p>4.5</p>
                         </div>
                         <h3 class="font-bold text-xl">Pet Bed</h3>
                         <p>$39.99</p>
@@ -271,7 +271,7 @@
                     <div class="items-center">
                         <div class="flex gap-2 items-center">
                             <i class="fa-solid fa-star text-yellow-300"></i>
-                            <p >4.5</p>
+                            <p>4.5</p>
                         </div>
                         <h3 class="font-bold text-xl">Pet Bed</h3>
                         <p>$39.99</p>
@@ -284,7 +284,7 @@
                     <div class="items-center">
                         <div class="flex gap-2 items-center">
                             <i class="fa-solid fa-star text-yellow-300"></i>
-                            <p >4.5</p>
+                            <p>4.5</p>
                         </div>
                         <h3 class="font-bold text-xl">Pet Bed</h3>
                         <p>$39.99</p>
@@ -297,49 +297,72 @@
                     <div class="items-center">
                         <div class="flex gap-2 items-center">
                             <i class="fa-solid fa-star text-yellow-300"></i>
-                            <p >4.5</p>
+                            <p>4.5</p>
                         </div>
                         <h3 class="font-bold text-xl">Pet Bed</h3>
                         <p>$39.99</p>
                     </div>
                 </div>
-                
+
             </div>
 
         </section>
 
         <!-- Price section -->
-         <section>
-            <div class=" px-5 py-10 lg:py-28 lg:px-28 mb-10 lg:mb-28">
+        <section>
+            <div class=" px-5 py-10 lg:py-20 lg:px-28 mb-5 lg:mb-10">
                 <h3 class="font-adlam text-2xl lg:text-4xl font-bold mb-10">Everyday low Price</h3>
                 <div class="grid grid-cols-1 lg:grid-cols-5 gap-5 justify-center items-center">
-                    <div class="lg:col-span-3 col-span-2 grid grid-cols-2 lg:grid-cols-3 lg:items-center  rounded-lg lg:px-20 px-5 py-10 bg-gradient-to-r from-[#F8CCFBFF] to-[#ACD2FDFF]">
+                    <div
+                        class="lg:col-span-3 col-span-2 grid grid-cols-2 lg:grid-cols-3 lg:items-center  rounded-lg lg:px-20 px-5 py-10 bg-gradient-to-r from-[#F8CCFBFF] to-[#ACD2FDFF]">
                         <!-- text-content -->
                         <div class="lg:col-span-2 ">
                             <p class="hidden lg:block font-sora text-xl mb-5">Under Price</p>
                             <h3 class="font-adlam font-bold text-xl lg:text-3xl mb-5">Pet Grooming Mitt</h3>
-                            <h3 class="text-white hidden lg:block font-bold font-adlam text-2xl mb-5">(Easy Hair Removal)</h3>
+                            <h3 class="text-white hidden lg:block font-bold font-adlam text-2xl mb-5">(Easy Hair
+                                Removal)</h3>
                             <h1 class="text-4xl lg:text-black text-white font-bold font-adlam">$7.99</h1>
                         </div>
                         <!-- image-content -->
-                         <div class="lg:w-[350px] lg:pr-10">
-                            <img  src="c1-assets/cute-dog-mid.png">
-                         </div>
+                        <div class="lg:w-[350px] lg:pr-10">
+                            <img src="c1-assets/cute-dog-mid.png">
+                        </div>
                     </div>
-                    <div class="col-span-2 grid grid-cols-2  rounded-lg px-5 lg:px-10 py-10  bg-gradient-to-r from-[#FFF9F4] to-[#F9DF8A]">
+                    <div
+                        class="col-span-2 grid grid-cols-2  rounded-lg px-5 lg:px-10 py-10  bg-gradient-to-r from-[#FFF9F4] to-[#F9DF8A]">
                         <!-- text-content -->
-                        <div class="col-span-1" >
-                            <h3 class="font-adlam font-bold text-xl lg:text-3xl mb-5" >T-Shirt for Dogs</h3>                     
+                        <div class="col-span-1">
+                            <h3 class="font-adlam font-bold text-xl lg:text-3xl mb-5">T-Shirt for Dogs</h3>
                             <h1 class="text-4xl text-yellow-400 font-bold font-adlam">$7.99</h1>
                         </div>
                         <!-- image-content -->
-                         <div  class="lg:w-[300px] relative lg:right-20 ">
+                        <div class="lg:w-[300px] relative lg:right-20 ">
                             <img src="c1-assets/cute-pet-mid.png">
-                         </div>
+                        </div>
                     </div>
                 </div>
             </div>
-         </section>
+        </section>
+
+        <!-- extra section -->
+        <section>
+            <div class=" px-5 py-5 lg:py-20 lg:px-28 mb-10 lg:mb-20">
+                <div class="bg-[#FFF9F4] lg:flex  gap-5 shadow-xl rounded-lg justify-around items-center p-10">
+                    <!-- text-content -->
+                    <div>
+                        <h3 class="font-adlam font-bold text-xl lg:text-3xl mb-5">Why Grooming Needed</h3>
+                        <p class="text-gray-600 items-center font-sora lg:text-xl lg:w-[500px]">When most people think about pet grooming, they conjure up images of bows, brushes, and running
+                            after their pets. Others have the misconception that pet grooming is not necessary. However, it
+                            is an important aspect of a pet’s overall well-being and health. 
+                        </p>
+                    </div>
+                    <!-- image-content -->
+                     <div class="border-4 border-yellow-400 mt-5 p-3">
+                        <img class="lg:h-[300px]" src="c1-assets/pet-grooming.webp">
+                     </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
