--- a/index.html
+++ b/index.html
@@ -346,24 +346,74 @@
 
         <!-- extra section -->
         <section>
-            <div class=" px-5 py-5 lg:py-20 lg:px-28 mb-10 lg:mb-20">
-                <div class="bg-[#FFF9F4] lg:flex  gap-5 shadow-xl rounded-lg justify-around items-center p-10">
+            <div class=" px-5 py-5 lg:py-20 lg:px-28 mb-10 lg:mb-14">
+                <div class="bg-[#FFF9F4] lg:flex gap-5 shadow-xl rounded-lg justify-around items-center p-10">
                     <!-- text-content -->
                     <div>
                         <h3 class="font-adlam font-bold text-xl lg:text-3xl mb-5">Why Grooming Needed</h3>
-                        <p class="text-gray-600 items-center font-sora lg:text-xl lg:w-[500px]">When most people think about pet grooming, they conjure up images of bows, brushes, and running
-                            after their pets. Others have the misconception that pet grooming is not necessary. However, it
-                            is an important aspect of a pet’s overall well-being and health. 
+                        <p class="text-gray-600 text-justify items-center font-sora lg:text-xl lg:w-[500px]">When most
+                            people think about pet grooming, they conjure up images of bows, brushes, and running
+                            after their pets. Others have the misconception that pet grooming is not necessary. However,
+                            it
+                            is an important aspect of a pet’s overall well-being and health.
                         </p>
                     </div>
                     <!-- image-content -->
-                     <div class="border-4 border-yellow-400 mt-5 p-3">
-                        <img class="lg:h-[300px]" src="c1-assets/pet-grooming.webp">
-                     </div>
+                    <div class="border-2 border-yellow-400 rounded-full mt-5 p-3">
+                        <img class="lg:h-[300px] rounded-full" src="c1-assets/pet-grooming.webp">
+                    </div>
                 </div>
             </div>
         </section>
+
     </main>
+    <section class="">
+        <div class="px-5 py-10 lg:py-20 lg:px-28 ">
+            <div class="lg:flex items-center justify-center gap-10 bg-[#FFF9F4] rounded-lg relative -mb-56 z-10">
+                <!-- img -->
+                <div>
+                    <img src="c1-assets/cute-pet-mid.png">
+                </div>
+                <!-- text -->
+                <div class="text-center px-3">
+                    <h3 class="font-bold font-adlam text-3xl lg:text-4xl mb-5">Get Pawsome News!</h3>
+                    <p class="font-sora text-2xl mb-5">Exclusive training tips, ticks, product deaks and more.</p>
+                    <input class="p-4 rounded-lg mb-5 w-4/5 lg:w-[450px]" type="email" placeholder="Enter email..."><br>
+                    <button class="bg-yellow-400 text-xl  rounded-lg px-7 py-2 font-sora mb-10">Subscribe</button>
+                </div>
+            </div>
+        </div>
+        <footer class="bg-yellow-200 pt-28">
+            <div class="grid grid-cols-1 lg:grid-cols-3 lg:gap-20 justify-between items-center px-10 lg:px-28 py-28">
+                <div class="">
+                    <div class="flex items-center gap-5 mb-5">
+                        <img src="c1-assets/logo-footer.png">
+                        <h3 class="font-sora text-2xl">Browse<span class="text-yellow-400 font-bold">4</span>Pets</h3>
+                    </div>
+                    <p class="font-sora text-xl text-gray-600 mb-10">Discover a world of treats, toys, and
+                        essentials handpicked for your furry friends
+                    </p>
+                </div>
+                <div class="lg:ml-32">
+                    <ul>
+                        <li class="font-sora text-xl mb-2"><a href="">Find a pet</a></li>
+                        <li class="font-sora text-xl mb-2"><a href="">Breeds</a></li>
+                        <li class="font-sora text-xl mb-10"><a href="">Contact us</a></li>
+                    </ul>
+                </div>
+                <div class="lg:ml-32">
+                    <h3 class="font-sora font-semibold text-xl mb-5">Follow Us</h3>
+                    <div class="flex gap-5">
+                        <i class="fa-brands fa-facebook text-2xl"></i>
+                        <i class="fa-brands fa-instagram text-2xl"></i>
+                        <i class="fa-brands fa-linkedin text-2xl"></i>
+                        <i class="fa-brands fa-youtube text-2xl"></i>
+                    </div>
+                </div>
+            </div>             
+         </footer>
+
+    </Section>    
 
 
 </body>
