--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <nav class="font-sora grid grid-cols-3 items-center bg-[#FFF9F4] px-5 lg:px-28 py-5 mb-10 lg:mb-28">
                 <!-- logo div -->
                 <div class="flex items-center gap-3">
-                    <img src="c1-assets/logo-header.png">
+                    <img class="animate-bounce" src="c1-assets/logo-header.png">
                     <h3 class="hidden lg:display-block lg:flex font-Sora text-2xl">Browse<span
                             class="text-yellow-300">4</span>Pets</h3>
 
@@ -89,7 +89,7 @@
                 <div class="px-5 lg:px-28">
                     <!-- text-content -->
                     <div class="lg:absolute">
-                        <h1 class=" font-bold text-3xl lg:text-5xl font-adlam mb-5">Pamper Your Pet,<br> Because They
+                        <h1 class="font-bold text-3xl lg:text-5xl font-adlam mb-5">Pamper Your Pet,<br> Because They
                             Deserve<br> the Best</h1>
                         <p class="text-gray-500 text-xl font-sora mb-5">Discover a world of treats, toys, and essentials
                             handpicked for<br>
@@ -412,7 +412,6 @@
                 </div>
             </div>             
          </footer>
-
     </Section>    
 
 
