added some changes

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 </div>
                 <!-- icons div -->
                 <div class="hidden lg:display-block lg:flex gap-5 justify-center items-center">
-                    <i class="fa-solid fa-bell fill-none"></i>
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-bell fill-none text-xl"></i>
+                    <i class="fa-solid fa-magnifying-glass text-xl"></i>
                     <button class=" border-2 border-yellow-400 text-xl rounded-lg px-7 py-2">Login</button>
                     <button class="bg-yellow-400 text-xl rounded-lg px-7 py-2">Register</button>
 
